mcp-inspector/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-inspector
  labels:
    app: mcp-inspector
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "self-signed-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - inspector.mcp.ay.dev
      secretName: mcp-inspector-tls
  rules:
    - host: inspector.mcp.ay.dev
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mcp-inspector
                port:
                  number: 6274
          - path: /proxy(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mcp-inspector
                port:
                  number: 6277
